the security is added

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,16 @@ dependencies {
     // mapstruct
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+
+    //jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+    //for security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.hashids:hashids:1.0.3'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
+
 }
 
 tasks.named('test') {
