--- a/src/main/resources/db/changelog/changelog-master.yml
+++ b/src/main/resources/db/changelog/changelog-master.yml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: /db/changelog/changeset/init_001.sql
+  - include:
+      file: /db/changelog/changeset/init_002.sql
